--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "stripe-azure-function",
   "version": "1.0.0",
+  "description": "Stripe PaymentIntent Azure Function",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "func start",
+    "test": "echo \"Skipping tests\" && exit 0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "stripe": "^19.2.0"
+    "stripe": "^14.0.0"
   }
 }
