--- a/.github/workflows/main_stripe-payment-api-1.yml
+++ b/.github/workflows/main_stripe-payment-api-1.yml
@@ -11,13 +11,13 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  NODE_VERSION: '20.x' # set this to the node version to use
 
 jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # required for actions/checkout
       
     steps:
       - name: 'Checkout GitHub Action'
@@ -34,7 +34,6 @@ jobs:
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
           npm run build --if-present
-          # npm run test --if-present
           popd
 
       - name: Upload artifact for deployment job
@@ -47,8 +46,8 @@ jobs:
     runs-on: windows-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # required for OIDC auth
+      contents: read # required for checkout
 
     steps:
       - name: Download artifact from build job
@@ -62,17 +61,12 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          audience: api://AzureADTokenExchange
+          auth-type: SERVICE_PRINCIPAL
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
           app-name: 'stripe-payment-api-1'
-          slot-name: 'Production'
-          package: .
-
-
-          
-
-
-
+          package: '.'
