--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "stripe-azure-function",
+  "name": "stripe-vercel-function",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "api/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "stripe": "^19.2.0"
   }
